5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1791_1596.log
== TEST (2019-05-29 14:06:05) 
-- CODE:
from numpy import*

v= array(eval(input("notas:")))
print(v)

m= v


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:06:29) 
-- CODE:
from numpy import*

v= array(eval(input("notas:")))
print(v)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:07:42) 
-- CODE:
from numpy import*

v= array(eval(input("notas:")))

media = (v/size[v])
print(media)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:08:32) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

m= size[v]
print(m)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:09:19) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

print=(size[v])




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:10:12) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

print(size[v])




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:10:30) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

print(max[v])




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:10:55) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

print(max(v))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:11:07) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

print(size(v))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:11:42) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

print((v)/size(v))




-- EXECUTION TIME:
0.44564
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
[0.33333333 0.         1.        ]
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
notas:[0.6 0.4 0.2 1.  0.6]
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
notas:[0.5 0.5 0.5 0.5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:11:49) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

print((v)/size(v))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:14:19) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

print([v]+/size(v))




-- EXECUTION TIME:
0.127957
-- ERROR:
  File "/home/codebench/codes/1791/1596/main.py", line 5
    print([v]+/size(v))
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:14:21) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

print([v]+/size(v))




-- ERROR:
File "XXXX", line 5
    print([v]+/size(v))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:14:54) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

print((v)+(v)+(v)/size(v))




-- EXECUTION TIME:
0.464539
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
[2.33333333 0.         7.        ]
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
[ 6.6  4.4  2.2 11.   6.6]
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
[4.5 4.5 4.5 4.5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:14:55) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

print((v)+(v)+(v)/size(v))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:15:18) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

print((v)/size(v))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:16:24) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

print(round((v)/size(v), 2)




-- EXECUTION TIME:
0.139103
-- ERROR:
  File "/home/codebench/codes/1791/1596/main.py", line 9
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:26) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

print(round((v)/size(v), 2)




-- ERROR:
File "XXXX", line 9
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:17:27) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

m= (v)/size(v)

print(round(m, 2)




-- EXECUTION TIME:
0.257967
-- ERROR:
  File "/home/codebench/codes/1791/1596/main.py", line 11
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:29) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

m= (v)/size(v)

print(round(m, 2)




-- ERROR:
File "XXXX", line 11
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:43) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

m= (v)/size(v)

print(round(m, 2)

-- ERROR:
File "XXXX", line 8
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:51) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

m= (v)/size(v)

print(round(m, 2)
-- ERROR:
File "XXXX", line 8
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:18:13) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

m=((v)/size(v))

print(round(m, 2)
-- ERROR:
File "XXXX", line 8
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:19:13) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


print((v)/size(v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:22:58) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

m= 
print(v/size(v))
-- EXECUTION TIME:
0.151884
-- ERROR:
  File "/home/codebench/codes/1791/1596/main.py", line 5
    m= 
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:00) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))

m= 
print(v/size(v))
-- ERROR:
File "XXXX", line 5
    m= 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:05) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


print(v/size(v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:25:40) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


print(sum(v)/size(v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:25:40) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


print(sum(v)/size(v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:25:40) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


print(sum(v)/size(v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:25:40) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


print(sum(v)/size(v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:25:41) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


print(sum(v)/size(v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:25:42) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


print(sum(v)/size(v))
-- EXECUTION TIME:
1.25163
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.3333333333333333
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
2.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:25:51) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


print(sum(v)/size(v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:26:53) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m=(sum(v)/size(v))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:52) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m=(sum(v)/size(v))
print(m)
x=(min(v))
print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:28) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m=(sum(v)/size(v))
x=(min(v))
y= m-x 
print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:31:22) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m=(sum(v)/size(v))
x=(min(v))
y= (m-x)
print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:32:13) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m=(sum(v)/size(v))
x=(min(v))
y= (m-x)
print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:32:52) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m=(sum(v)/size(v))

print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:32:59) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m=(sum(v)/size(v))

print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:33:43) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m=(sum(v)/size(v)-min(v))

print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:36:46) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m=(sum(v)-min(v)/(size(v))

print(round(m, 2))
-- EXECUTION TIME:
0.175037
-- ERROR:
  File "/home/codebench/codes/1791/1596/main.py", line 8
    print(round(m, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:36:48) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m=(sum(v)-min(v)/(size(v))

print(round(m, 2))
-- ERROR:
File "XXXX", line 8
    print(round(m, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:37:23) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v)-min(v)/size(v))

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:37:54) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v)-min(v)/ size(v))

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:35) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v)/ size(v))

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:45) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v)-min(v)/ size(v))

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:30) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(min(v)/ size(v))

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:43:10) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v)-min(v)/ size(v))

print(round(m,2))
-- EXECUTION TIME:
0.457976
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
13.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
7.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:43:12) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v)-min(v)/ size(v))

print(round(m,2))
-- EXECUTION TIME:
0.368057
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
13.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
7.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:43:13) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v)-min(v)/ size(v))

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:44:30) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v)/ size(v))

print(round(m,2))
-- EXECUTION TIME:
0.472997
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
13.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
7.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:44:30) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v)/ size(v))

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:46:16) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v)/ size(v))

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:47:02) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:47:39) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))
x = (m/size(v))
print(round(x,2))
-- EXECUTION TIME:
0.466598
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
2.6
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
1.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:47:41) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))
x = (m/size(v))
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:47:57) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))
x = (m/size(v))
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:52:14) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))
x = (m/size(v)-1)
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:52:35) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))
x = (m/size(v))
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:55:33) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))
y=size(v)- min(v)
x = (m/y)
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:55:34) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))
y=size(v)- min(v)
x = (m/y)
print(round(x,2))
-- EXECUTION TIME:
0.809897
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
3.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:59) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))

x = (m/size(v[2]) )
print(round(x,2))
-- EXECUTION TIME:
0.547726
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
13.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:02) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))

x = (m/size(v[2]) )
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:59:51) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))

x = (m/(v[1:2]) )
print(round(x,2))
-- EXECUTION TIME:
0.450627
-- ERROR:
/home/codebench/codes/1791/1596/main.py:8: RuntimeWarning: divide by zero encountered in true_divide
  x = (m/(v[1:2]) )
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1596/main.py", line 9, in <module>
    print(round(x,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:52) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))

x = (m/(v[1:2]) )
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:00:05) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))

x = (m/(v[2]) )
print(round(x,2))
-- EXECUTION TIME:
0.532527
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
13.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:00:06) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))

x = (m/(v[2]) )
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:00:31) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))

x = (m/(v[1,2]) )
print(round(x,2))
-- EXECUTION TIME:
0.354468
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1596/main.py", line 8, in <module>
    x = (m/(v[1,2]) )
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:00:32) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))

x = (m/(v[1,2]) )
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:01:34) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))

x = (m/size(v)-(v[min]) )
print(round(x,2))
-- EXECUTION TIME:
0.512758
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1596/main.py", line 8, in <module>
    x = (m/size(v)-(v[min]) )
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:35) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))

x = (m/size(v)-(v[min]) )
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:04:00) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))

x = (m/size(v) )
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:04:40) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))

x = (m/size(v)-(v))
print(round(x,2))
-- EXECUTION TIME:
0.366638
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1596/main.py", line 9, in <module>
    print(round(x,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:04:40) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))

x = (m/size(v)-(v))
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:06:25) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))

x = (m/size(v)-1(v))
print(round(x,2))
-- EXECUTION TIME:
0.427026
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1596/main.py", line 8, in <module>
    x = (m/size(v)-1(v))
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:06:27) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))

x = (m/size(v)-1(v))
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:06:49) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))

x = (m/size(v-1)
print(round(x,2))
-- EXECUTION TIME:
0.139897
-- ERROR:
  File "/home/codebench/codes/1791/1596/main.py", line 9
    print(round(x,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:06:50) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))

x = (m/size(v-1)
print(round(x,2))
-- ERROR:
File "XXXX", line 9
    print(round(x,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:07:17) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))
y= size(v)-1
x = (m/y)
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:07:25) 
-- CODE:
from numpy import*

v = array(eval(input("notas:")))


m =(sum(v) - min(v))
y= size(v)-1
x = (m/y)
print(round(x,2))
-- EXECUTION TIME:
0.530636
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
